fix: resolved the sidebar white space issue

--- a/src/style.less
+++ b/src/style.less
@@ -1098,7 +1098,7 @@ input {
 }
 
 .global-footer-subscribe {
-    width: 410px;
+    width: 408px;
     height: 40px;
 }
 
@@ -3270,6 +3270,8 @@ table th {
     }
 
     .section-two {
+        margin: auto;
+        width: 100%;
         padding: 16px 0;
         margin-top: 32px;
     }
@@ -3297,6 +3299,7 @@ table th {
     .section-two-bottom-header {
         flex-direction: column;
         margin: 32px 16px;
+        width: 90%;
     }
 
     .section-two-bottom-left {
